# starguide-phantom

./: .gitattributes  .pre-commit-config.yaml  README.md  dose.ipynb  pyproject.toml  suv.py
data/: 0Hr.seg.nrrd  24Hr.seg.nrrd  24hr.seg.nrrd  96Hr.seg.nrrd  96hr.seg.nrrd  dose.mrb
dcm/0Hr - 10 min SPECT/: 1.2.840.113619.2.281.5210.1021143.1695838024.191613801.dcm
dcm/0Hr - 3 min SPECT/: 1.2.840.113619.2.281.5210.1021143.1695838097.191684901.dcm
dcm/0Hr - CT/: 1.2.840.113619.2.278.3.34220555.857.1685616164.670.10.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.12.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.13.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.14.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.15.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.19.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.21.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.25.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.27.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.28.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.29.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.32.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.34.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.39.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.4.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.41.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.42.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.48.dcm  1.2.840.113619.2.278.3.34220555.857.1685616164.670.5.dcm  (+22 more)
(+237 files in other folders)
